fix lowest line being cut off

--- a/web-app/css/cmeditor-common.css
+++ b/web-app/css/cmeditor-common.css
@@ -1,14 +1,7 @@
 
-/* .CodeMirror { */
-/*     border: 1px solid #C0C0C0; */
-/*     font-family: "Ubuntu Mono"; */
-/*     font-size: 11pt; */
-/*     height: 400px; */
-/*     width: 100%; */
-/*     max-width:1200px;	 */
-/*     line-height: 1.3; */
-/*     z-index: 9; */
-/* } */
+.CodeMirror {
+    padding-bottom: 20px;
+}
 
 .CodeMirror-scroll {
     overflow-x: hidden !important
@@ -244,6 +237,8 @@ div.cmeditor.cmeditor-fullscreen .CodeMirror {
     height: -moz-calc(100% - 30px);
     height: -webkit-calc(100% - 30px);
     height: -o-calc(100% - 30px);
+
+    padding-bottom: 0px;
 }
 
  div.cmeditor.cmeditor-fullscreen .ui-layout-container, .ui-layout-container * {
